fix: techs background color on mobile fixed

--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -85,6 +85,7 @@
 @media screen and (max-width: 640px) {
   .techs {
     padding: 70px 18px;
+    background-color: inherit;
   }
   .techs__title {
     font-size: 18px;
